--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: ruby
-rvm:
-- 2.3.3
+    rvm:
+        - 2.3.3
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+    - chmod +x ./script/cibuild.sh # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script:
+    - bash ./script/cibuild.sh
 
 after_success:
-  - bash deploy.sh
+    - bash deploy.sh
 
 
 after_success:
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
