--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ language: ruby
         - 2.3.3
 
 before_script:
-    - chmod +x ./script/cibuild.sh # or do this locally and commit
+    - chmod +x ./script/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script:
-    - bash ./script/cibuild.sh
+script: ./script/cibuild
 
 after_success:
     - bash deploy.sh
