--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,12 @@ script:
 
 after_success:
     - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
-    - bash ./script/deploy.sh
+#    - bash ./script/deploy.sh
+
+deploy:
+    provider: pages
+    skip_cleanup: true
+    github_token: $GH_TOKEN # Set in travis-ci.org dashboard
+    local-dir: output
+    on:
+        branch: gh-pages
