--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 
 before_script:
     - chmod +x ./script/cibuild.sh # or do this locally and commit
+    - chmod +x ./script/deploy.sh # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
@@ -11,13 +12,13 @@ script:
     - bash ./script/cibuild.sh
 
 after_success:
-    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
-#    - bash ./script/deploy.sh
+#    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+    - bash ./script/deploy.sh
 
-deploy:
-    provider: pages
-    skip_cleanup: true
-    github_token: $GH_TOKEN # Set in travis-ci.org dashboard
-    local-dir: output
-    on:
-        branch: gh-pages
+#deploy:
+#    provider: pages
+#    skip_cleanup: true
+#    github_token: $GH_TOKEN # Set in travis-ci.org dashboard
+#    local-dir: output
+#    on:
+#        branch: gh-pages
